--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,5 +6,9 @@
   </head>
   <body>
     <div id="root"></div>
+    <script
+      src="https://kit.fontawesome.com/26d6a93618.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
