added meta tags for linkedin parsing

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,6 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+
+    <!-- content for linkedin parsing -->
+    <meta name="title" property="og:title" content="The Beans">
+    <meta property="og:type" content="Website">
+    <meta name="image" property="og:image" content="https://raw.githubusercontent.com/tforde4623/TheBeans/main/img-assets/userpage.png">
+    <meta name="description" property="og:description" content="The Beans is a social site allowing users to share coffee recipes, beans, and cafes.">
+    <meta name="author" content="Tommy Forde">
+
     <!-- favicon by flaticons.com -->
     <title>The Beans</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
